# buildat

./: .gitignore  CMakeLists.txt  LICENSE  NOTICE  README.md  client_api.txt  conventions.txt  design.txt  todo.txt  whynot.txt
builtin/client_data/: client_data.cpp  meta.txt
builtin/client_file/: api.h  client_file.cpp
builtin/client_lib_test/: meta.json
builtin/client_lib_test/client_lua/: module.lua
builtin/client_lua/: client_lua.cpp
builtin/client_lua/include/: api.h
builtin/entitysync/: api.h  entitysync.cpp  meta.txt
builtin/ground_plane_lighting/: api.h  ground_plane_lighting.cpp  meta.json
builtin/ground_plane_lighting/client_lua/: module.lua
builtin/loader/: api.h  loader.cpp
builtin/main_context/: api.h  main_context.cpp  meta.json
builtin/network/: api.h  network.cpp
builtin/replicate/: api.h  meta.json  replicate.cpp
builtin/voxelworld/: api.h  meta.json  voxelworld.cpp
builtin/voxelworld/client_lua/: module.lua
builtin/worldgen/: api.h  worldgen.cpp
client/: api.lua  default.lua  dummy.lua  extensions.lua  init.lua  misc.lua  modules.lua  packet.lua  replication.lua  sandbox.lua  test.lua  urho3d.lua
doc/: c++_notes.txt  client_api.txt  conventions.txt  design.txt  external_issues.txt  misc.txt  most_important_performance_issues.txt  todo.txt  whynot.txt
extensions/__menu/: README.md  init.lua
extensions/__menu/res/: boot_style.xml  main_style.xml
extensions/cereal/: init.lua
extensions/entitysync/: init.lua
extensions/experimental/: init.lua
extensions/graphics/: init.lua
extensions/graphics3d/: init.lua
extensions/joyinput/: init.lua
extensions/keyinput/: init.lua
extensions/magic_sandbox/: init.lua
extensions/mouseinput/: init.lua
extensions/polycode_sandbox/: init.lua
extensions/replicate/: init.lua
extensions/sandbox_test/: init.lua  try_exploit.lua
extensions/sandbox_test/tests/: safe.lua
extensions/test/: init.lua
extensions/ui/: init.lua
extensions/ui_utils/: init.lua
extensions/uistack/: init.lua
extensions/urho3d/: init.lua  safe_classes.lua  safe_events.lua  safe_globals.lua
games/digger/: README.txt
games/digger/__loader/: __loader.cpp
games/digger/main/: main.cpp  meta.json
games/digger/main/client_lua/: init.lua
games/digger/worldgen/: api.h  meta.json  worldgen.cpp
games/entitytest/main/: main.cpp  meta.json  meta.txt
games/entitytest/main/client_lua/: init.lua
games/geometry/main/: main.cpp  meta.json
games/geometry/main/client_lua/: init.lua
games/geometry2/main/: main.cpp
games/geometry2/main/client_lua/: init.lua
games/minigame/__loader/: __loader.cpp
games/minigame/main/: main.cpp  meta.txt
games/minigame/main/client_lua/: init.lua
games/test/test1/: meta.json  test1.cpp
games/test/test1/client_lua/: init.lua
games/test/test2/: test2.cpp
games/uitest/__loader/: __loader.cpp
games/uitest/main/: main.cpp
games/uitest/main/client_lua/: init.lua
share/: init.lua
share/builtin/client_file/: client_file.cpp
share/builtin/client_file/include/: api.h
share/builtin/client_lua/: boot.lua  client_lua.cpp
share/builtin/client_lua/include/: api.h
share/builtin/network/: network.cpp
share/builtin/network/include/: api.h
share/builtin/network/server/: init.cpp
share/client/: init.lua  packet.lua
src/boot/: autodetect.cpp  autodetect.h  basic_init.h  cmem.c  cmem.h
src/boot/linux/: cmem.c
src/boot/windows/: cmem.c
src/client/: app.cpp  app.h  config.cpp  config.h  main.cpp  state.cpp  state.h
src/core/: config.h  json.cpp  json.h  log.cpp  log.h  sajson.h  types.h
src/guard/: buildat_guard_interface.cpp  buildat_guard_interface.h  guard_launcher.sh  lib.c
src/impl/: atlas.cpp  block.cpp  compress.cpp  event.cpp  fs.cpp  magic_event_handler.cpp  mesh.cpp  module.cpp  noise.cpp  os.cpp  packet_stream.cpp  sha1.cpp  tcpsocket.cpp  thread.cpp  thread_pool.cpp  voxel.cpp  voxel_volume.cpp  worker_thread.cpp
src/impl/linux/: debug.cpp  file_watch.cpp  os.cpp  process.cpp
src/impl/windows/: debug.cpp  file_watch.cpp  os.cpp  process.cpp
src/interface/: atlas.h  atlas_cereal.h  block.h  compress.h  core.h  debug.h  event.h  file_watch.h  fs.h  magic_event.h  magic_event_handler.h  mesh.h  module.h  module_info.h  mutex.h  noise.h  os.h  packet_stream.h  polyvox_cereal.h  polyvox_numeric.h  polyvox_std.h  process.h  select_handler.h  semaphore.h  server.h  server_config.h  sha1.h  tcpsocket.h  thread.h  thread_pool.h  urho3d_cereal.h  voxel.h  voxel_cereal.h  voxel_volume.h  worker_thread.h
src/lua_bindings/: atlas.cpp  cereal.cpp  init.cpp  init.h  luabind_util.h  mesh.cpp  misc.cpp  misc_urho3d.cpp  replicate.cpp  replicate.h  sandbox_util.h  spatial_update_queue.cpp  util.cpp  util.h  voxel.cpp  voxel_volume.cpp
src/ports/: windows_compat.h  windows_minimal.h  windows_sockets.h
src/server/: config.cpp  config.h  internal_interface.h  magic_event_handler.h  main.cpp  rccpp.cpp  rccpp.h  rccpp_util.cpp  rccpp_util.h  state.cpp  state.h  urho3d_log_redirect.h
test/testmodule1/server/: main.cpp
test/testmodules/__loader/: __loader.cpp
test/testmodules/__loader/server/: init.cpp  main.cpp
test/testmodules/minigame/: minigame.cpp
test/testmodules/minigame/client_lua/: init.lua
test/testmodules/test1/: api.h  meta.txt  test1.cpp
test/testmodules/test1/client_lua/: init.lua
test/testmodules/test1/include/: api.h
test/testmodules/test1/server/: init.cpp  main.cpp
test/testmodules/test2/: meta.txt  test2.cpp
test/testmodules/test2/server/: init.cpp
test/testmodules/uitest/: uitest.cpp
util/: codestyle.sh  cpp_indent.py  extra_cpp_style.py  uncrustify.cfg  uncrustify.cpp.cfg  uncrustify.header.cfg  valgrind_suppressions.txt
util/windows/: launch_client.bat  launch_server.bat  wine_launch_client.sh  wine_launch_server.sh
